--- a/HoloscreenII/.gitignore
+++ b/HoloscreenII/.gitignore
@@ -2,3 +2,5 @@ LeapMotion w OpenCV\Library\metadata\*
 LeapMotion w OpenCV\Library\ShaderCache\*
 /holoscreen_android/Temp/UnityLockfile
 /holoscreen_android/Temp/*
+**/logs
+*.log
