--- a/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
+++ b/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\PaintFeature.cs" />
      <Compile Include="Assets\Scripts\CamTextureUI.cs" />
      <Compile Include="Assets\Scripts\DataManager.cs" />
      <Compile Include="Assets\Scripts\InteractionScript.cs" />
