--- a/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
+++ b/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
@@ -46,10 +46,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\PaintFeature.cs" />
      <Compile Include="Assets\Scripts\CamTextureUI.cs" />
      <Compile Include="Assets\Scripts\DataManager.cs" />
+     <Compile Include="Assets\Scripts\GestureControl.cs" />
      <Compile Include="Assets\Scripts\InteractionScript.cs" />
+     <Compile Include="Assets\Scripts\PaintFeature.cs" />
      <Compile Include="Assets\Scripts\ProjectionScript.cs" />
      <Compile Include="Assets\Scripts\Sync.cs" />
      <Compile Include="Assets\Scripts\WSManager.cs" />
