--- a/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
+++ b/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
@@ -372,6 +372,9 @@
      <Compile Include="Assets\Scripts\DataManager.cs" />
      <Compile Include="Assets\Scripts\GestureControl.cs" />
      <Compile Include="Assets\Scripts\InteractionScript.cs" />
+     <Compile Include="Assets\Scripts\InteractionScriptHand.cs" />
+     <Compile Include="Assets\Scripts\InteractionScriptObject.cs" />
+     <Compile Include="Assets\Scripts\InteractionScript_Demo.cs" />
      <Compile Include="Assets\Scripts\PaintFeature.cs" />
      <Compile Include="Assets\Scripts\ProjectionScript.cs" />
      <Compile Include="Assets\Scripts\Sync.cs" />
@@ -391,14 +394,20 @@
      <None Include="Assets\OpenCVForUnity\OpenCV_LICENSE.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\lbpcascade_frontalface.xml" />
      <None Include="Assets\Data\handData_G0.txt" />
+     <None Include="Assets\OutlineEffect\VerticesOutline_Always.shader" />
      <None Include="Assets\Data\handData_G2.txt" />
+     <None Include="Assets\Data\handDataG3_new.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\text\trained_classifier_erGrouping.xml" />
+     <None Include="Assets\Data\handDataG4_new.txt" />
      <None Include="Assets\Data\handData_G1.txt" />
+     <None Include="Assets\Data\handDataG0_new.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\text\OCRHMM_transitions_table.xml" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\text\trained_classifierNM1.xml" />
+     <None Include="Assets\Data\handDataG1_new.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\text\trained_classifierNM2.xml" />
      <None Include="Assets\Scripts\handData.txt.txt" />
      <None Include="Assets\WebSocketUnity\README-Unity4.X.txt" />
+     <None Include="Assets\Data\handDataG2_new.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity5.6.4/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
