rewrite, context swtich completes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-HoloscreenII\holoscreen_android\Assets\OpenCVForUnity
+HoloscreenII/holoscreen_android/Assets/OpenCVForUnity/
+HoloscreenII/holoscreen_android/Assets/OpenCVForUnity.meta
+HoloscreenII/holoscreen_android/Library/ShaderCache/
+HoloscreenII/holoscreen_android/Library/metadata/
