--- a/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
+++ b/HoloscreenII/holoscreen_android/Assembly-CSharp.csproj
@@ -391,6 +391,7 @@
      <Compile Include="Assets\WebSocketUnity\WebSocketUnityDelegate.cs" />
      <None Include="Assets\WebSocketUnity\README-Unity5.X.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\haarcascade_frontalface_alt.xml" />
+     <None Include="Assets\Data\svm.xml" />
      <None Include="Assets\OpenCVForUnity\OpenCV_LICENSE.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\lbpcascade_frontalface.xml" />
      <None Include="Assets\Data\handData_G0.txt" />
@@ -430,7 +431,7 @@
  <HintPath>C:/Program Files/Unity5.6.4/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
  </Reference>
  <Reference Include="websocket.csharp">
- <HintPath>C:/Users/harry/Documents/github/HoloscreenII/HoloscreenII/holoscreen_android/Assets/WebSocketUnity/Plugins/x86_64/websocket.csharp.dll</HintPath>
+ <HintPath>C:/Users/harry/Documents/GitHub/HoloscreenII/HoloscreenII/holoscreen_android/Assets/WebSocketUnity/Plugins/x86_64/websocket.csharp.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
