update bug fix, able to track in space with higher scanning quality

--- a/HoloscreenII/Holoscreen Surfaces/Assembly-CSharp.csproj
+++ b/HoloscreenII/Holoscreen Surfaces/Assembly-CSharp.csproj
@@ -401,6 +401,7 @@
      <Compile Include="Assets\Scripts\VMINextPage.cs" />
      <Compile Include="Assets\Scripts\VMIOpen.cs" />
      <Compile Include="Assets\Scripts\VMIPrevPage.cs" />
+     <Compile Include="Assets\Scripts\Vibration.cs" />
      <Compile Include="Assets\Scripts\VirtualFurnitureMenu.cs" />
      <Compile Include="Assets\Scripts\VirtualMenu.cs" />
      <Compile Include="Assets\Scripts\VirtualMenuItem.cs" />
