--- a/HoloscreenII/Holoscreen Surfaces/Assembly-CSharp-Editor.csproj
+++ b/HoloscreenII/Holoscreen Surfaces/Assembly-CSharp-Editor.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\TangoSDK\Examples\Common\Scripts\Editor\TangoDynamicMeshInspector.cs" />
      <None Include="Assets\WebSocketUnity\README-Unity5.X.txt" />
      <None Include="Assets\TangoSDK\Examples\ExperimentalMeshOcclusion\Shaders\ZTestBlur.shader" />
+     <None Include="Assets\ArvisMag_Assets\OilLamp\ReadMe.txt" />
      <None Include="Assets\OpenCVForUnity\StreamingAssets\haarcascade_frontalface_alt.xml" />
      <None Include="Assets\TangoPrefabs\Shaders\TangoEnvironmentalLighting\EnvironmentalLightingStandard.shader" />
      <None Include="Assets\OpenCVForUnity\OpenCV_LICENSE.txt" />
